Create and Get is added

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 GOOGLE_ID=638147973196-8p6fcphoa5k9nckpk33d3rubcaouiceo.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+MONGODB_URI=mongodb+srv://admin:D33dam2417@test1.pfqcntk.mongodb.net/?retryWrites=true&w=majority
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=f/+3kgozqKt7ANzwcJwDwfYkYaJ6tD1ofHApvSayiRw=
